libavdevice/dshow_pin.c
@@ -19,6 +19,7 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  */
 
+#define NO_DSHOW_STRSAFE
 #include "dshow.h"
 
 #include <stddef.h>
